[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "snake_game"
path = "src/lib.rs"

[[bin]]
name = "snake_game"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.5"

[features]
default = []
wrap_walls = []
multiple_foods = []
powerups = []